test/algeff/wrong/eff-rec6.kk.out
test/algeff/wrong/eff-rec6.kk(36, 1): error: Type xhide is declared as being (co)inductive but it occurs
 recursively in a negative position.
 hint: declare it as a 'type rec' (or 'effect rec)' to allow negative occurrences